--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
+apply from: 'buildconfig.gradle'
 
 buildscript {
   repositories {
@@ -6,15 +7,9 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.0.0-beta4'
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
-  }
-}
-
-allprojects {
-  repositories {
-    jcenter()
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'me.tatarka:gradle-retrolambda:3.2.3'
+    classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.2.1'
   }
 }
 
