--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,17 @@ android {
   packagingOptions {
     exclude 'META-INF/services/javax.annotation.processing.Processor'
   }
+  compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
+  }
 }
-
+//@formatter:off
 dependencies {
   def dependencies = rootProject.ext.dependencies
   apt dependencies.daggerCompiler
   apt dependencies.butterKnifeCompiler
   apt dependencies.lombok
-
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile dependencies.appCompat
   compile dependencies.supportV4
@@ -54,6 +57,6 @@ dependencies {
   compile dependencies.okHttp
   compile dependencies.adapterRxJava
   compile dependencies.rxAndroid
-
   testCompile dependencies.jUnit
 }
+//@formatter:on
