--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,6 +28,7 @@ ext {
   retrofitVersion = '2.0.0-beta4'
   rxAndroidVersion = '1.0.1'
   supportVersion = '23.1.1'
+  stethoVersion = '1.3.0'
   jUnitVersion = '4.12'
 
   dependencies = [adapterRxJava      : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
@@ -47,6 +48,8 @@ ext {
                   recyclerView       : "com.android.support:recyclerview-v7:${supportVersion}",
                   retrofit           : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
                   rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
+                  stetho             : "com.facebook.stetho:stetho:${stethoVersion}",
+                  stethoOkHttp       : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
                   supportV4          : "com.android.support:support-v4:${supportVersion}",
                   supportDesign      : "com.android.support:design:${supportVersion}",
                   jUnit              : "junit:junit:${jUnitVersion}"]
