--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,11 +22,13 @@ ext {
   daggerVersion = '2.0.2'
   glideVersion = '3.6.1'
   gsonVersion = '2.6.1'
+  injectVersion = '1'
   jsr250ApiVersion = '1.0'
   lombokVersion = '1.16.6'
   okHttpVersion = '3.1.2'
   retrofitVersion = '2.0.0-beta4'
-  rxAndroidVersion = '1.0.1'
+  rxAndroidVersion = '1.1.0'
+  rxJavaVersion = '1.1.1'
   supportVersion = '23.1.1'
   stethoVersion = '1.3.0'
   jUnitVersion = '4.12'
@@ -41,6 +43,7 @@ ext {
                   daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
                   glide              : "com.github.bumptech.glide:glide:${glideVersion}",
                   gson               : "com.google.code.gson:gson:${gsonVersion}",
+                  inject             : "javax.inject:javax.inject:${injectVersion}",
                   jsr250Api          : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
                   loggingInterceptor : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
                   lombok             : "org.projectlombok:lombok:${lombokVersion}",
@@ -48,6 +51,7 @@ ext {
                   recyclerView       : "com.android.support:recyclerview-v7:${supportVersion}",
                   retrofit           : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
                   rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
+                  rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
                   stetho             : "com.facebook.stetho:stetho:${stethoVersion}",
                   stethoOkHttp       : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
                   supportV4          : "com.android.support:support-v4:${supportVersion}",
