--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -32,29 +32,39 @@ ext {
   supportVersion = '23.1.1'
   stethoVersion = '1.3.0'
   jUnitVersion = '4.12'
+  assertJVersion = '1.7.1'
+  mockitoVersion = '1.9.5'
 
-  dependencies = [adapterRxJava      : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
-                  appCompat          : "com.android.support:appcompat-v7:${supportVersion}",
-                  butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
-                  butterKnifeCompiler: "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",
-                  cardView           : "com.android.support:cardview-v7:${supportVersion}",
-                  converterGson      : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-                  dagger             : "com.google.dagger:dagger:${daggerVersion}",
-                  daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
-                  glide              : "com.github.bumptech.glide:glide:${glideVersion}",
-                  gson               : "com.google.code.gson:gson:${gsonVersion}",
-                  inject             : "javax.inject:javax.inject:${injectVersion}",
-                  jsr250Api          : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
-                  loggingInterceptor : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-                  lombok             : "org.projectlombok:lombok:${lombokVersion}",
-                  okHttp             : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-                  recyclerView       : "com.android.support:recyclerview-v7:${supportVersion}",
-                  retrofit           : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-                  rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
-                  rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
-                  stetho             : "com.facebook.stetho:stetho:${stethoVersion}",
-                  stethoOkHttp       : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
-                  supportV4          : "com.android.support:support-v4:${supportVersion}",
-                  supportDesign      : "com.android.support:design:${supportVersion}",
-                  jUnit              : "junit:junit:${jUnitVersion}"]
+  //@formatter:off
+  dependencies = [
+      adapterRxJava      : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
+      appCompat          : "com.android.support:appcompat-v7:${supportVersion}",
+      butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
+      butterKnifeCompiler: "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",
+      cardView           : "com.android.support:cardview-v7:${supportVersion}",
+      converterGson      : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+      dagger             : "com.google.dagger:dagger:${daggerVersion}",
+      daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
+      glide              : "com.github.bumptech.glide:glide:${glideVersion}",
+      gson               : "com.google.code.gson:gson:${gsonVersion}",
+      inject             : "javax.inject:javax.inject:${injectVersion}",
+      jsr250Api          : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
+      loggingInterceptor : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
+      lombok             : "org.projectlombok:lombok:${lombokVersion}",
+      okHttp             : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+      recyclerView       : "com.android.support:recyclerview-v7:${supportVersion}",
+      retrofit           : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+      rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
+      rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
+      stetho             : "com.facebook.stetho:stetho:${stethoVersion}",
+      stethoOkHttp       : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
+      supportV4          : "com.android.support:support-v4:${supportVersion}",
+      supportDesign      : "com.android.support:design:${supportVersion}"
+  ]
+
+  testDependencies = [
+      jUnit  : "junit:junit:${jUnitVersion}",
+      assertj: "org.assertj:assertj-core:${assertJVersion}",
+      mockito: "org.mockito:mockito-core:${mockitoVersion}"
+  ]
 }
