--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'java'
 apply plugin: 'me.tatarka.retrolambda'
 
 //noinspection GroovyUnusedAssignment
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 //noinspection GroovyUnusedAssignment
-targetCompatibility = 1.7
+targetCompatibility = 1.8
 
 configurations {
   provided
@@ -21,8 +21,10 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile dependencies.lombok
   compile dependencies.rxJava
-  //compile dependencies.dagger
-  //provided dependencies.daggerCompiler
-  provided dependencies.jsr250Api
   compile dependencies.inject
+
+  def testDependencies = rootProject.ext.testDependencies
+  testCompile testDependencies.jUnit
+  testCompile testDependencies.mockito
+  testCompile testDependencies.assertj
 }
