--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -45,13 +45,13 @@ dependencies {
   apt dependencies.lombok
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile project(':domain')
+  compile project(':data')
   compile dependencies.appCompat
   compile dependencies.supportV4
   compile dependencies.butterKnife
   compile dependencies.dagger
   compile dependencies.supportDesign
   compile dependencies.loggingInterceptor
-  compile dependencies.gson
   compile dependencies.lombok
   compile dependencies.retrofit
   compile dependencies.converterGson
