--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'jacoco'
 
 //noinspection GroovyUnusedAssignment
 sourceCompatibility = 1.8
@@ -28,3 +28,11 @@ dependencies {
   testCompile testDependencies.mockito
   testCompile testDependencies.assertj
 }
+
+jacocoTestReport {
+  reports {
+    html.enabled = true
+  }
+}
+
+check.dependsOn jacocoTestReport
