--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,7 @@ allprojects {
     maven {
       url 'https://oss.sonatype.org/content/repositories/snapshots/'
     }
+    mavenCentral()
   }
 }
 
@@ -25,7 +26,7 @@ ext {
   jsr250ApiVersion = '1.0'
   lombokVersion = '1.16.6'
   okHttpVersion = '3.1.2'
-  retrofitVersion = '2.0.0-beta4'
+  retrofitVersion = '2.0.0'
   rxAndroidVersion = '1.1.0'
   rxJavaVersion = '1.1.1'
   supportVersion = '23.1.1'
