--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,56 +8,58 @@ allprojects {
   }
 }
 
+//@formatter:off
 ext {
-  android = [applicationId    : 'com.dzaitsev.boilerplate',
-             appName          : 'Android Boilerplate',
-             buildToolsVersion: '23.0.2',
-             compileSdkVersion: 23,
-             minSdkVersion    : 14,
-             targetSdkVersion : 23,
-             versionCode      : 1,
-             versionName      : '0.1.0']
+  android = [
+      applicationId    : 'com.dzaitsev.boilerplate',
+      appName          : 'Android Boilerplate',
+      buildToolsVersion: '23.0.2',
+      compileSdkVersion: 23,
+      minSdkVersion    : 14,
+      targetSdkVersion : 23,
+      versionCode      : 1,
+      versionName      : '0.1.0'
+  ]
 
   // Libraries:
-  daggerVersion = '2.0.2'
-  glideVersion = '3.6.1'
-  gsonVersion = '2.6.1'
-  injectVersion = '1'
+  assertJVersion   = '1.7.1'
+  daggerVersion    = '2.0.2'
+  glideVersion     = '3.6.1'
+  gsonVersion      = '2.6.1'
+  injectVersion    = '1'
   jsr250ApiVersion = '1.0'
-  lombokVersion = '1.16.6'
-  okHttpVersion = '3.1.2'
-  retrofitVersion = '2.0.0'
+  jUnitVersion     = '4.12'
+  lombokVersion    = '1.16.6'
+  mockitoVersion   = '1.9.5'
+  okHttpVersion    = '3.1.2'
+  retrofitVersion  = '2.0.0'
   rxAndroidVersion = '1.1.0'
-  rxJavaVersion = '1.1.1'
-  supportVersion = '23.1.1'
-  stethoVersion = '1.3.0'
-  jUnitVersion = '4.12'
-  assertJVersion = '1.7.1'
-  mockitoVersion = '1.9.5'
+  rxJavaVersion    = '1.1.1'
+  stethoVersion    = '1.3.0'
+  supportVersion   = '23.1.1'
 
-  //@formatter:off
   dependencies = [
-      adapterRxJava      : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
-      appCompat          : "com.android.support:appcompat-v7:${supportVersion}",
-      cardView           : "com.android.support:cardview-v7:${supportVersion}",
-      converterGson      : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-      dagger             : "com.google.dagger:dagger:${daggerVersion}",
-      daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
-      glide              : "com.github.bumptech.glide:glide:${glideVersion}",
-      gson               : "com.google.code.gson:gson:${gsonVersion}",
-      inject             : "javax.inject:javax.inject:${injectVersion}",
-      jsr250Api          : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
-      loggingInterceptor : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-      lombok             : "org.projectlombok:lombok:${lombokVersion}",
-      okHttp             : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-      recyclerView       : "com.android.support:recyclerview-v7:${supportVersion}",
-      retrofit           : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-      rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
-      rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
-      stetho             : "com.facebook.stetho:stetho:${stethoVersion}",
-      stethoOkHttp       : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
-      supportV4          : "com.android.support:support-v4:${supportVersion}",
-      supportDesign      : "com.android.support:design:${supportVersion}"
+      appCompat         : "com.android.support:appcompat-v7:${supportVersion}",
+      cardView          : "com.android.support:cardview-v7:${supportVersion}",
+      supportDesign     : "com.android.support:design:${supportVersion}",
+      recyclerView      : "com.android.support:recyclerview-v7:${supportVersion}",
+      supportV4         : "com.android.support:support-v4:${supportVersion}",
+      stethoOkHttp      : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
+      stetho            : "com.facebook.stetho:stetho:${stethoVersion}",
+      glide             : "com.github.bumptech.glide:glide:${glideVersion}",
+      gson              : "com.google.code.gson:gson:${gsonVersion}",
+      daggerCompiler    : "com.google.dagger:dagger-compiler:${daggerVersion}",
+      dagger            : "com.google.dagger:dagger:${daggerVersion}",
+      loggingInterceptor: "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
+      okHttp            : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+      adapterRxJava     : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
+      converterGson     : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+      retrofit          : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+      rxAndroid         : "io.reactivex:rxandroid:${rxAndroidVersion}",
+      rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
+      jsr250Api         : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
+      inject            : "javax.inject:javax.inject:${injectVersion}",
+      lombok            : "org.projectlombok:lombok:${lombokVersion}",
   ]
 
   testDependencies = [
