--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,9 @@
 allprojects {
   repositories {
     jcenter()
-    maven {
-      url 'https://oss.sonatype.org/content/repositories/snapshots/'
-    }
     mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url "https://jitpack.io" }
   }
 }
 
@@ -24,6 +23,7 @@ ext {
   // Libraries:
   assertJVersion   = '1.7.1'
   daggerVersion    = '2.0.2'
+  dbFlowVersion    = '3.0.0-beta5'
   glideVersion     = '3.6.1'
   gsonVersion      = '2.6.1'
   injectVersion    = '1'
@@ -48,6 +48,9 @@ ext {
       stetho            : "com.facebook.stetho:stetho:${stethoVersion}",
       glide             : "com.github.bumptech.glide:glide:${glideVersion}",
       gson              : "com.google.code.gson:gson:${gsonVersion}",
+      dbFlowCore        : "com.github.Raizlabs.DBFlow:dbflow-core:${dbFlowVersion}",
+      dbFlowProcessor   : "com.github.Raizlabs.DBFlow:dbflow-processor:${dbFlowVersion}",
+      dbFlow            : "com.github.Raizlabs.DBFlow:dbflow:${dbFlowVersion}",
       daggerCompiler    : "com.google.dagger:dagger-compiler:${daggerVersion}",
       dagger            : "com.google.dagger:dagger:${daggerVersion}",
       loggingInterceptor: "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
