--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,21 +22,21 @@ ext {
 
   // Libraries:
   assertJVersion   = '1.7.1'
-  daggerVersion    = '2.0.2'
+  daggerVersion    = '2.1'
   dbFlowVersion    = '3.0.0-beta5'
-  glideVersion     = '3.6.1'
-  gsonVersion      = '2.6.1'
+  glideVersion     = '3.7.0'
+  gsonVersion      = '2.6.2'
   injectVersion    = '1'
   jsr250ApiVersion = '1.0'
   jUnitVersion     = '4.12'
-  lombokVersion    = '1.16.6'
+  lombokVersion    = '1.16.8'
   mockitoVersion   = '1.9.5'
-  okHttpVersion    = '3.1.2'
+  okHttpVersion    = '3.2.0'
   retrofitVersion  = '2.0.0'
   rxAndroidVersion = '1.1.0'
-  rxJavaVersion    = '1.1.1'
-  stethoVersion    = '1.3.0'
-  supportVersion   = '23.1.1'
+  rxJavaVersion    = '1.1.2'
+  stethoVersion    = '1.3.1'
+  supportVersion   = '24.0.0-alpha1'
 
   dependencies = [
       appCompat         : "com.android.support:appcompat-v7:${supportVersion}",
