add Flow library with some basic classes

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -58,6 +58,7 @@ dependencies {
   compile dependencies.converterGson
   compile dependencies.dagger
   compile dependencies.dbFlowCore
+  compile dependencies.flow
   compile dependencies.dbFlow
   compile dependencies.glide
   compile dependencies.gson
