--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,6 +36,7 @@ ext {
   retrofitVersion  = '2.0.0'
   rxAndroidVersion = '1.1.0'
   rxJavaVersion    = '1.1.2'
+  rxViperVersion   = '0.1.1'
   stethoVersion    = '1.3.1'
   supportVersion   = '24.0.0-alpha1'
 
@@ -62,6 +63,7 @@ ext {
       retrofit          : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
       rxAndroid         : "io.reactivex:rxandroid:${rxAndroidVersion}",
       rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
+      rxViper           : "com.github.RxViper:RxViper:${rxViperVersion}",
       jsr250Api         : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
       inject            : "javax.inject:javax.inject:${injectVersion}",
       lombok            : "org.projectlombok:lombok:${lombokVersion}",
