--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.0-alpha5'
+    classpath 'com.android.tools.build:gradle:2.1.0'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+    classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.2.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
+    classpath "io.realm:realm-gradle-plugin:1.0.0"
   }
 }
 
