--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,11 +3,10 @@ allprojects {
     jcenter()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-    maven { url "https://jitpack.io" }
+    maven { url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo' }
   }
 }
 
-//@formatter:off
 ext {
   android = [
       applicationId    : 'com.dzaitsev.boilerplate',
@@ -21,24 +20,26 @@ ext {
   ]
 
   // Libraries:
-  assertJVersion   = '1.7.1'
-  daggerVersion    = '2.1'
-  dbFlowVersion    = '3.0.0-beta5'
-  flowVersion      = '1.0.0-alpha'
-  glideVersion     = '3.7.0'
-  gsonVersion      = '2.6.2'
-  injectVersion    = '1'
-  jsr250ApiVersion = '1.0'
-  jUnitVersion     = '4.12'
-  lombokVersion    = '1.16.8'
-  mockitoVersion   = '1.9.5'
-  okHttpVersion    = '3.2.0'
-  retrofitVersion  = '2.0.0'
-  rxAndroidVersion = '1.1.0'
-  rxJavaVersion    = '1.1.2'
-  rxViperVersion   = '0.1.1'
-  stethoVersion    = '1.3.1'
-  supportVersion   = '24.0.0-alpha1'
+  assertJVersion     = '3.4.1'
+  daggerVersion      = '2.4'
+  dbFlowVersion      = '3.0.0-beta5'
+  flowVersion        = '1.0.0-alpha'
+  glideVersion       = '3.7.0'
+  gsonVersion        = '2.6.2'
+  injectVersion      = '1'
+  jsr250ApiVersion   = '1.0'
+  jUnitVersion       = '4.12'
+  lombokVersion      = '1.16.8'
+  mockitoVersion     = '2.0.54-beta'
+  okHttpVersion      = '3.3.1'
+  retrofitVersion    = '2.0.2'
+  rxAndroidVersion   = '1.2.0'
+  rxJavaVersion      = '1.1.5'
+  rxViperVersion     = '0.8.1'
+  stethoVersion      = '1.3.1'
+  stethoRealmVersion = '0.9.0'
+  supportVersion     = '23.4.0'
+  guavaVersion       = '19.0'
 
   dependencies = [
       appCompat         : "com.android.support:appcompat-v7:${supportVersion}",
@@ -47,12 +48,10 @@ ext {
       recyclerView      : "com.android.support:recyclerview-v7:${supportVersion}",
       supportV4         : "com.android.support:support-v4:${supportVersion}",
       stethoOkHttp      : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
+      stethoRealm       : "com.uphyca:stetho_realm:${stethoRealmVersion}",
       stetho            : "com.facebook.stetho:stetho:${stethoVersion}",
       glide             : "com.github.bumptech.glide:glide:${glideVersion}",
       gson              : "com.google.code.gson:gson:${gsonVersion}",
-      dbFlowCore        : "com.github.Raizlabs.DBFlow:dbflow-core:${dbFlowVersion}",
-      dbFlowProcessor   : "com.github.Raizlabs.DBFlow:dbflow-processor:${dbFlowVersion}",
-      dbFlow            : "com.github.Raizlabs.DBFlow:dbflow:${dbFlowVersion}",
       daggerCompiler    : "com.google.dagger:dagger-compiler:${daggerVersion}",
       dagger            : "com.google.dagger:dagger:${daggerVersion}",
       flow              : "com.squareup.flow:flow:${flowVersion}",
@@ -63,10 +62,11 @@ ext {
       retrofit          : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
       rxAndroid         : "io.reactivex:rxandroid:${rxAndroidVersion}",
       rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
-      rxViper           : "com.github.RxViper:RxViper:${rxViperVersion}",
+      rxViper           : "rxviper:rxviper:${rxViperVersion}",
       jsr250Api         : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
       inject            : "javax.inject:javax.inject:${injectVersion}",
       lombok            : "org.projectlombok:lombok:${lombokVersion}",
+      guava             : "com.google.guava:guava:${guavaVersion}",
   ]
 
   testDependencies = [
