--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'realm-android'
 
 android {
   def android = rootProject.ext.android
@@ -48,18 +49,17 @@ android {
 //@formatter:off
 dependencies {
   def dependencies = rootProject.ext.dependencies
+  apt dependencies.guava
   apt dependencies.daggerCompiler
   apt dependencies.lombok
-  apt dependencies.dbFlowProcessor
+
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile dependencies.adapterRxJava
   compile dependencies.appCompat
   compile dependencies.cardView
   compile dependencies.converterGson
   compile dependencies.dagger
-  compile dependencies.dbFlowCore
   compile dependencies.flow
-  compile dependencies.dbFlow
   compile dependencies.glide
   compile dependencies.gson
   compile dependencies.inject
@@ -74,6 +74,7 @@ dependencies {
   compile dependencies.stetho
   compile dependencies.supportDesign
   compile dependencies.supportV4
+  compile dependencies.stethoRealm
   provided dependencies.jsr250Api
 
   def testDependencies = rootProject.ext.testDependencies
