--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,26 +20,26 @@ ext {
   ]
 
   // Libraries:
-  assertJVersion     = '3.4.1'
-  daggerVersion      = '2.4'
+  assertJVersion     = '3.5.2'
+  daggerVersion      = '2.7'
   dbFlowVersion      = '3.0.0-beta5'
-  flowVersion        = '1.0.0-alpha'
+  flowVersion        = '1.0.0-alpha2'
   glideVersion       = '3.7.0'
-  gsonVersion        = '2.6.2'
+  gsonVersion        = '2.8.0'
   injectVersion      = '1'
   jsr250ApiVersion   = '1.0'
   jUnitVersion       = '4.12'
-  lombokVersion      = '1.16.8'
-  mockitoVersion     = '2.0.54-beta'
-  okHttpVersion      = '3.3.1'
-  retrofitVersion    = '2.0.2'
-  rxAndroidVersion   = '1.2.0'
-  rxJavaVersion      = '1.1.5'
-  rxViperVersion     = '0.8.1'
-  stethoVersion      = '1.3.1'
-  stethoRealmVersion = '0.9.0'
-  supportVersion     = '23.4.0'
-  guavaVersion       = '19.0'
+  lombokVersion      = '1.16.10'
+  mockitoVersion     = '2.2.9'
+  okHttpVersion      = '3.4.1'
+  retrofitVersion    = '2.1.0'
+  rxAndroidVersion   = '1.2.1'
+  rxJavaVersion      = '1.2.1'
+  rxViperVersion     = '0.10.0'
+  stethoVersion      = '1.4.1'
+  stethoRealmVersion = '2.0.0'
+  supportVersion     = '25.0.0'
+  guavaVersion       = '20.0'
 
   dependencies = [
       appCompat         : "com.android.support:appcompat-v7:${supportVersion}",
@@ -62,7 +62,7 @@ ext {
       retrofit          : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
       rxAndroid         : "io.reactivex:rxandroid:${rxAndroidVersion}",
       rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
-      rxViper           : "rxviper:rxviper:${rxViperVersion}",
+      rxViper           : "com.dzaitsev.rxviper:rxviper:${rxViperVersion}",
       jsr250Api         : "javax.annotation:jsr250-api:${jsr250ApiVersion}",
       inject            : "javax.inject:javax.inject:${injectVersion}",
       lombok            : "org.projectlombok:lombok:${lombokVersion}",
