--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'realm-android'
 
 android {
-  def android = rootProject.ext.android
+  final def android = rootProject.ext.android
 
   compileSdkVersion android.compileSdkVersion
   buildToolsVersion android.buildToolsVersion
@@ -48,36 +48,36 @@ android {
 }
 //@formatter:off
 dependencies {
-  def dependencies = rootProject.ext.dependencies
-  apt dependencies.guava
-  apt dependencies.daggerCompiler
-  apt dependencies.lombok
+  final def libraries = rootProject.ext.dependencies
+  apt libraries.guava
+  apt libraries.daggerCompiler
+  apt libraries.lombok
 
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile dependencies.adapterRxJava
-  compile dependencies.appCompat
-  compile dependencies.cardView
-  compile dependencies.converterGson
-  compile dependencies.dagger
-  compile dependencies.flow
-  compile dependencies.glide
-  compile dependencies.gson
-  compile dependencies.inject
-  compile dependencies.loggingInterceptor
-  compile dependencies.lombok
-  compile dependencies.okHttp
-  compile dependencies.retrofit
-  compile dependencies.rxAndroid
-  compile dependencies.rxJava
-  compile dependencies.rxViper
-  compile dependencies.stethoOkHttp
-  compile dependencies.stetho
-  compile dependencies.supportDesign
-  compile dependencies.supportV4
-  compile dependencies.stethoRealm
-  provided dependencies.jsr250Api
+  compile libraries.adapterRxJava
+  compile libraries.appCompat
+  compile libraries.cardView
+  compile libraries.converterGson
+  compile libraries.dagger
+  compile libraries.flow
+  compile libraries.glide
+  compile libraries.gson
+  compile libraries.inject
+  compile libraries.loggingInterceptor
+  compile libraries.lombok
+  compile libraries.okHttp
+  compile libraries.retrofit
+  compile libraries.rxAndroid
+  compile libraries.rxJava
+  compile libraries.rxViper
+  compile libraries.stethoOkHttp
+  compile libraries.stetho
+  compile libraries.supportDesign
+  compile libraries.supportV4
+  compile libraries.stethoRealm
+  provided libraries.jsr250Api
 
-  def testDependencies = rootProject.ext.testDependencies
+  final def testDependencies = rootProject.ext.testDependencies
   testCompile testDependencies.assertj
   testCompile testDependencies.jUnit
   testCompile testDependencies.mockito
